feat: create home page banner

--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
   "name": "Flávio Arêas",
   "description": "Mobile Developer",
   "github": "areasflavio",
+  "banner": "https://images.unsplash.com/photo-1667840555722-52c6c84d1b8c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1920&q=80",
   "playlists": {
     "jogos": [
       {
